kubernetes/loki/middleware-basic-auth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: basic-auth

spec:
  basicAuth:
    secret: loki-basic-auth
    realm: Loki - Authentication Required
